--- a/multi-thread/src/main/resource/application.yml
+++ b/multi-thread/src/main/resource/application.yml
@@ -8,7 +8,7 @@ spring:
     name: mysql
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
-      url: jdbc:mysql://127.0.0.1:3306/citybrain_service?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+      url: jdbc:mysql://127.0.0.1:3306/citybrain_service?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
       username: root
       password: 123456
       max-active: 200
