--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -82,8 +82,28 @@
         </dependency>
     </dependencies>
 
-
     <build>
+      <!--  <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>-->
+
         <directory>../target</directory>
         <plugins>
             <plugin>
