--- a/multi-thread/src/main/resources/application.yml
+++ b/multi-thread/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
       password: 123456
       max-active: 200
       max-wait: 2000
+
+  #thymeleaf模版前缀
+  thymeleaf:
+    prefix: classpath:/templates/
+
 server:
   port: 10086
 to:
