--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -81,29 +81,40 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>2.0.4.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
-      <!--  <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.yml</include>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*.yml</include>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-        </resources>-->
+        <!--  <resources>
+              <resource>
+                  <directory>src/main/java</directory>
+                  <includes>
+                      <include>**/*.yml</include>
+                      <include>**/*.properties</include>
+                      <include>**/*.xml</include>
+                  </includes>
+                  <filtering>false</filtering>
+              </resource>
+              <resource>
+                  <directory>src/main/resources</directory>
+                  <includes>
+                      <include>**/*.yml</include>
+                      <include>**/*.properties</include>
+                      <include>**/*.xml</include>
+                  </includes>
+                  <filtering>false</filtering>
+              </resource>
+          </resources>-->
 
         <directory>../target</directory>
         <plugins>
