--- a/multi-thread/src/main/resources/application.yml
+++ b/multi-thread/src/main/resources/application.yml
@@ -18,6 +18,26 @@ spring:
   thymeleaf:
     prefix: classpath:/templates/
 
+  redis:
+    #数据库索引
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        #最大连接数
+        max-active: 8
+        #最大阻塞等待时间(负数表示没限制)
+        max-wait: -1
+        #最大空闲
+        max-idle: 8
+        #最小空闲
+        min-idle: 0
+        #连接超时时间
+        timeout: 10000
+
+
 server:
   port: 10086
 to:
