--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>spring-data-redis</artifactId>
             <version>2.1.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.41</version>
+        </dependency>
     </dependencies>
 
     <build>
