--- a/multi-thread/src/main/resources/application.yml
+++ b/multi-thread/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   server:
-    port: 10086
+    port: 1008
 
   mail:
     host: smtp.163.com
@@ -47,5 +47,5 @@ to:
 mybatis:
   configuration:
     mapUnderscoreToCamelCase: true
-    logImpl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    logImpl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*.xml
