--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -93,6 +93,11 @@
             <version>2.1.6.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.hyperledger.fabric-sdk-java</groupId>
+            <artifactId>fabric-sdk-java</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.41</version>
