--- a/multi-thread/src/main/resources/application.yml
+++ b/multi-thread/src/main/resources/application.yml
@@ -47,5 +47,5 @@ to:
 mybatis:
   configuration:
     mapUnderscoreToCamelCase: true
-#    logImpl: org.apache.ibatis.logging.stdout.StdOutImpl
+    logImpl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*.xml
