--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -112,6 +112,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.datahub</groupId>
+            <artifactId>aliyun-sdk-datahub</artifactId>
+            <version>2.13.0-public</version>
+        </dependency>
     </dependencies>
 
     <build>
