--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-excelant</artifactId>
-            <version>3.14</version>
+            <version>3.17</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -116,6 +116,11 @@
             <groupId>com.aliyun.datahub</groupId>
             <artifactId>aliyun-sdk-datahub</artifactId>
             <version>2.13.0-public</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
