--- a/muke_wexin/src/main/resources/application.yml
+++ b/muke_wexin/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 spring:
-
   datasource:
     name: mysql
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      url: jdbc:mysql://127.0.0.1:3306/muke_weixin?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
-      username: root
-      password: 123456
-      max-active: 200
-      max-wait: 2000
-
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://127.0.0.1:3306/muke_weixin?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+    max-active: 200
+    max-wait: 2000
+    driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
   configuration:
