--- a/multi-thread/src/main/resources/application.yml
+++ b/multi-thread/src/main/resources/application.yml
@@ -48,3 +48,10 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 server:
   port: 80
+
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      # 采样率，模式0.1，也就是10%，为了便于观察效果，改为1.0，也就是100%。生产环境建议保持默认。
+      probability: 1.0
