--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -9,6 +9,10 @@
         <module>spring-security-oauth2-authorization-mysql</module>
         <module>spring-security-oauth2-authorization-redis</module>
         <module>spring-security-oauth2-authorization-jwt</module>
+        <module>spring-security-oauth2-authorization-expansion</module>
+        <module>spring-security-oauth2-resource</module>
+        <module>spring-security-oauth2-resource-jwt</module>
+        <module>spring-security-oauth2-authorization-more-grant-type</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
