--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -143,6 +143,11 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
